# benford-law-simulator-rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs
